--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.3"
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "core-js": "^3.9.1",
+    "regenerator-runtime": "^0.13.7"
   }
 }
