--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "ue-website",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "default": "index.html",
   "scripts": {
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html ./dist"
   },
   "author": "Emanuele Di Giacomo",
   "license": "ISC",
@@ -16,5 +17,10 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "core-js": "^3.9.1",
     "regenerator-runtime": "^0.13.7"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "maintained node versions"
+  ]
 }
